<?xml version="1.0"?>
<package format="3">
  <name>circle_detector_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 节点：使用 Realsense D415i + OpenCV 检测白色圆形电磁铁并发布三维坐标</description>
  <maintainer email="your@email.com">你的名字</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
